; ModuleID = '/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_bwrite_get_bits_written.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/common/extr_listcomp.c_bwrite_get_bits_written.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitwriter = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bwrite_get_bits_written(%struct.bitwriter* %0) #0 {
  %2 = alloca %struct.bitwriter*, align 8
  store %struct.bitwriter* %0, %struct.bitwriter** %2, align 8
  %3 = load %struct.bitwriter*, %struct.bitwriter** %2, align 8
  %4 = getelementptr inbounds %struct.bitwriter, %struct.bitwriter* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.bitwriter*, %struct.bitwriter** %2, align 8
  %7 = getelementptr inbounds %struct.bitwriter, %struct.bitwriter* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = sub nsw i32 %5, %8
  %10 = shl i32 %9, 3
  %11 = load %struct.bitwriter*, %struct.bitwriter** %2, align 8
  %12 = getelementptr inbounds %struct.bitwriter, %struct.bitwriter* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @ffs(i32 %13)
  %15 = sub nsw i32 8, %14
  %16 = add nsw i32 %10, %15
  %17 = load %struct.bitwriter*, %struct.bitwriter** %2, align 8
  %18 = getelementptr inbounds %struct.bitwriter, %struct.bitwriter* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = sub nsw i32 %16, %19
  ret i32 %20
}

declare dso_local i32 @ffs(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
